--- a/src/app/todo/todo.component.html
+++ b/src/app/todo/todo.component.html
@@ -1,4 +1,24 @@
 <h1>Todos</h1>
+<main>
+  <form (submit)="addTask()">
+    <input
+      [(ngModel)]="newTaskTitle"
+      placeholder="What needs to be done?"
+      name="newTaskTitle"
+      type="text"
+    />
+  </form>
+</main>
 <div *ngFor="let task of tasks">
-  {{ task.title }}
+  <input
+    type="checkbox"
+    [(ngModel)]="task.completed"
+    (change)="saveTask(task)"
+  />
+  <input
+    type="text"
+    [(ngModel)]="task.title"
+  />
+  <button (click)="saveTask(task)">Save</button>
+  <button (click)="deleteTask(task)">Delete</button>
 </div>
